@@ -40,8 +40,14 @@ public:
 
     virtual void __incRef(); // First derived class with class data members overrides this.
     virtual void __decRef(); // Ditto.
+    virtual void __addObject(GCObjectMultiSet&) {} // Ditto.
+    virtual bool __usesClasses() { return false; } // Ditto.
+
     virtual int __getRef() const;
     virtual void __setNoDelete(bool);
+
+    virtual void __gcReachable(GCObjectMultiSet&) const = 0;
+    virtual void __gcClear() = 0;
 
     int __getRefUnsafe() const
     {
@@ -53,12 +59,7 @@ public:
 	--_ref;
     }
 
-    virtual void __gcReachable(GCObjectMultiSet&) const = 0;
-    virtual void __gcClear() = 0;
-
 protected:
-
-    static void __addObject(GCObjectMultiSet&, GCShared*);
 
     int _ref;
     bool _noDelete;
