@@ -1,6 +1,9 @@
 Changes since version 3.0.0
 ---------------------------
 
+- Fixed a bug in the class garbage collector that could result in double
+  deallocation of class instances.
+
 - IceUtil::Time::toString() has been deprecated and should no longer
   be used. Instead, use IceUtil::Time::toDateTime() to get a date
   and time string. (toString() will continue to work as a synonym for
